alignment correction when screen size change

--- a/css/css.zip.css/css/stylesheet.css
+++ b/css/css.zip.css/css/stylesheet.css
@@ -70,12 +70,6 @@ h5 {
   grid-template-areas: "skill1 skill2 skill3";
 }
 
-.realSkillsDiv{
-  margin: auto;
-  display: grid;
-  grid-gap: 10rem;
-}
-
 .ccoSkills {
   color: #b13759;
   font-size: 20px;
@@ -221,26 +215,26 @@ text-align: center;
 
 #creativeSkills {
  border: 1px solid;
- padding: 10px;
- width: 20%;
- margin-left: 60px;
+ padding: 30px;
+ width: 30%;
+ margin-left: 20px;
  margin-bottom: 10px;
  grid-area: skill1;
 }
 
 #computerSkills {
  border: 1px solid;
- padding: 10px;
- width: 20%;
+ padding: 30px;
+ width: 30%;
  margin-bottom: 10px;
  grid-area: skill2;
 }
 
 #otherSkills {
   border: 1px solid;
-  padding: 10px;
-  width: 20%;
-  margin-right: 60px;
+  padding: 30px;
+  width: 30%;
+  margin-right: 20px;
   margin-bottom: 10px;
   grid-area: skill3;
 }
@@ -273,7 +267,11 @@ text-align: center;
 #linksDiv {
   display: inline-block;
 }
-
+#online {
+  font-size: 13px;
+  font-family: cursive;
+  padding: 1px;
+}
 
 #socialMedia {
   font-size: 20px;
@@ -303,6 +301,8 @@ form{
 
 label{
   width: 80px;
+  color: rgb(0, 0, 0);
+  font-weight: 900;
   display: inline-block;
   text-align: right;   
   font-weight: bolder;
@@ -310,13 +310,6 @@ label{
 
 input [type="checkbox"] [type="radio"]{
   margin-left: 32px;
-}
-
-
-#online {
-  font-size: 13px;
-  font-family: cursive;
-  padding: 1px;
 }
 
 #about{
@@ -355,11 +348,55 @@ input [type="checkbox"] [type="radio"]{
     margin-left: 20px;
   }
 
+  #education {
+    margin-right: 1px;
+    margin-left: 1px;
+    border: none;
+    text-align: center;
+  }
+
+  #experience {
+    margin-right: 1px;
+    margin-left: 1px;
+    border: none;
+    text-align: center;
+  }
+  
+  #realSkillsDiv{
+    flex-direction: column;
+  }
+
+  .container{
+    height: 90%;
+  }
+
+  #creativeSkills {
+    border: none;
+    padding: 0px;
+    width: 0%;
+    margin-left: 0px;
+   }
+   
+   #computerSkills {
+    border: none;
+    padding: 0px;
+    width: 0%;
+    margin-bottom: 0px; 
+   }
+   
+   #otherSkills {
+     border: none;
+     padding-top: 0px;
+     width: 0%;
+     margin-top: 5px;
+     margin-right: 0px;
+     margin-bottom: 0px;
+   }
 }
 
 @media (max-width: 430px) {
   .realSkillsDiv { 
-    grid-template-columns: repeat(2,1fr); 
+    grid-template-columns: repeat(1,1fr); 
   }
 
   #introDiv {
@@ -368,22 +405,15 @@ input [type="checkbox"] [type="radio"]{
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-
-  .sections {
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 700px) {
-  .realSkillsDiv { 
-    grid-template-columns: repeat(2,1fr); 
+  }  
+  
+  #realSkillsDiv{
+    flex-direction: column;
   }
 
-
-  .sections {
-    margin-right: 20px;
-    margin-left: 20px;
+  .icons {
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -397,24 +427,61 @@ input [type="checkbox"] [type="radio"]{
     "skill3";
   }
 
-  #creativeSkills {
-    border: 1px solid;
+  #realSkillsDiv{
+    flex-direction: column;
+  }
+
+  #computerSkills {
+    border: none;
     padding: 10px;
-    width: 10%;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    grid-area: skill1;
+    width: 35%;
+   }
+
+  .carouselItems img {
+    height: 40vw;
+  }
+
+  #carouselExampleIndicators {
+    padding-left: 30%;
+    margin-bottom: 57%;
+    margin-top: 6%;
+  }
+}
+
+@media (max-width: 785px) {
+
+  .sections {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+
+  .container{
+    height: 70%;
+  }
+  
+  #creativeSkills {
+    padding: 10px;
+    border: none;
+    width: 35%;
+    margin-left: 0px;
    }
    
    #computerSkills {
-    border: 1px solid;
-    padding: 5px;
-    width: 10%;
-    margin-bottom: 10px;
-    grid-area: skill2;
+    padding: 10px;
+    width: 35%;
    }
    
    #otherSkills {
-     border: n;
+     padding: 10px;
+     border: none;
+     width: 35%;
+     margin-right: 0px;
    }
+
+   label{
+    width: 100px;
+   }
+
+  
+  
 }
